2003-02-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cachedresult.h, src/cachedresult.cxx:
  - Fixed silly lifetime bug (now returns reference)
  - Removed CacheEntry class for now (uses less memory this way)
 src/cursor.cxx:
  - Oops, forgot to save changes earlier.
2003-02-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.h, src/cursor.cxx:
  - Cursor may adopt existing SQL cursor returned from function
2003-02-24  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/*:
  - Great Renaming of all test programs to 0-padded 3-digit test numbers
2003-02-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cachedresult.h, src/cachedresult.cxx:
  - Store a single empty result to return when needed (fixes lifetime bug)
2003-02-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cachedresult.h, include/pqxx/connection.h,
 include/pqxx/result.h, include/pqxx/robusttransaction.h,
 include/pqxx/tablereader.h:
  - Documented more parameters
2003-02-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection.h, src/connection.cxx:
  - Removed default constructor completely
2003-02-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection.h, src/connection.cxx, test/test43.cxx:
  - #include <memory>
  - Disabled controversial default constructor for now
 include/pqxx/transactionitf.h, test/test*.cxx:
  - Added Exec() version taking query argument in std::string form
2003-02-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/transaction.h:
  - Fixed little mistake in inline docs.  Thanks Dave Gomboc.
2003-02-11  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection.h, src/connection.cxx, test/test*.cxx:
  - Connection constructor now accepts null connection string
  - Default constructor for Connection creates lazy connection
2003-02-11  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac:
  - Bumped revision to 1.4.0
 include/pqxx/connection.h, src/connection.cxx, test/test1.cxx: