@@ -1,5 +1,6 @@
 1.4.5
  - fixed crash CachedResult that was less shallow than I thought
+ - fixed quoting problem with adopted SQL cursors
 1.4.4
  - (forgot to save cursor.cxx with new constructor in 1.4.4, sorry)
 1.4.3
